--- a/style.css
+++ b/style.css
@@ -34,16 +34,30 @@ body{
     border-radius: 50%;
 }
 
-.productes{
+.products-head{
     grid-column: 2/3;
-    grid-row: 1/13;
-    background-color: #28d407;
+    grid-row: 1/2;
+    border: #d6d6d6 solid 2px;
+}
+
+.products{
+    grid-column: 2/3;
+    grid-row: 2/13;
+    background-color: #ffffff;
+    border: #d6d6d6 solid 2px;
+    border-top: transparent;
+}
+
+.head-product{
+    height: 75px;
+    border-bottom: #d6d6d6 solid 2px;
 }
 
 .head-name{
     grid-column: 3/5;
     grid-row: 1/2;
     background-color: #e8e8e8;
+    border-bottom: #d6d6d6 solid 2px;
 }
 
 .head-name h1{
@@ -100,15 +114,11 @@ body{
     grid-column: 3/4;
     grid-row: 3/13;
     background-color:#fff;
-    border: #d6d6d6 solid 2px;
+    border-top: #d6d6d6 solid 2px;
+    border-right: #d6d6d6 solid 2px;
     max-height: 100vh;
-    overflow: scroll;
+    overflow-y: scroll;
     overflow-x: hidden;
-}
-
-.contacts-list img{
-    height: 70%;
-    float: left;
 }
 
 .contact-item{
@@ -116,17 +126,27 @@ body{
     border-bottom: #d6d6d6 solid 2px;
 }
 
+.contact-item img{
+    margin: 3px 10px;
+    display: inline-block;
+    height: 90%;
+    width: 45px;
+    float: left;
+    border: transparent;
+    border-radius: 50%;
+    box-shadow: 0 0 2px 1px rgba(92,92,92,1);
+}
 
 .contact-item a{
     color: #000;
     text-decoration: none;
-    height: 50px;
-    margin: 0;
     cursor: pointer;
 }
 
 .contact-item p{
     font-size: 20px;
+    margin: 0;
+    padding-top: 10px;
 }
 
 .contact-info{
@@ -145,73 +165,53 @@ body{
 }
 
 .info img{
+    margin: 100px 43%;
+    border-bottom: #d6d6d6 solid 2px;
+    border-radius: 50%;
     width: 100px;
+    height: 100px;
+    box-shadow: 0 0 25px 1px rgba(92,92,92,1);
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.contactBook{
-    margin-top: 20px;
+.info h3{
+    text-align: center;
 }
 
-#tableContact{
-    border-collapse: collapse;
+.info p{
+    text-align: center;
 }
 
-#tableSearchContact{
-    border-collapse: collapse;
+#deleteButton{
+    background: linear-gradient(#ed3147, #832124);
+    border: transparent;
+    border-radius: 3px;
+    font-size: 25px;
+    cursor: pointer;
+    color: #e3e3e3;
+    margin: 50px 43% ;
 }
 
-.tableHead{
-    font-size: 20px;
-    font-style: italic;
-    font-weight: bold;
+::-webkit-scrollbar{
+    width: 10px;
+    background-color: #F5F5F5;
 }
 
-.contactName{
-    width: 228px;
-    border: black solid 1px;
+::-webkit-scrollbar-track {
+    border-radius: 10px;
+    background: rgba(0,0,0,0.1);
+    border: 1px solid #ccc;
 }
 
-.contactNumber{
-    width: 228px;
-    border: black solid 1px;
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background: linear-gradient(left, #fff, #e4e4e4);
+    border: 1px solid #aaa;
 }
 
-.contactAddress{
-    width: 584px;
-    border: black solid 1px;
+::-webkit-scrollbar-thumb:hover {
+    background: #fff;
 }
 
-.deleteContact{
-    width: 100px;
-    border: black solid 1px;
-    margin: 0 auto;
-}
-
-.contactSearchName{
-    width: 228px;
-    border: black solid 1px;
-}
-
-.contactSearchNumber{
-    width: 228px;
-    border: black solid 1px;
-}
-
-.contactSearchAddress{
-    width: 684px;
-    border: black solid 1px;
+::-webkit-scrollbar-thumb:active {
+    background: linear-gradient(left, #22ADD4, #1E98BA);
 }
