--- a/templates/adminDashboardPage.html
+++ b/templates/adminDashboardPage.html
@@ -1,5 +1,5 @@
-<h1>Устроенные работники</h1>
-<div ng-controller="employedCtrl">
+<h1>Доска админа</h1>
+<div ng-controller="adminDashboardCtrl">
     <table ng-repeat="staff in employedStaff">
         <tr>
             <td>{{staff.name}}</td>
@@ -7,3 +7,5 @@
         </tr>
     </table>
 </div>
+
+
