--- a/templates/listNotEmployedPage.html
+++ b/templates/listNotEmployedPage.html
@@ -1,1 +1,10 @@
-<h1>list Not Employed Page</h1>
+<h1>Не устроенные работники</h1>
+<div ng-controller="notEmployedCtrl">
+    <table ng-repeat="staff in notEmployedStaff">
+        <tr>
+            <td>{{staff.name}}</td>
+            <td><button ng-click="arrange(staff.name)">Устроить</button></td>
+            <td><button ng-click="deleteStaff(staff.name)">Удалить</button></td>
+        </tr>
+    </table>
+</div>
