--- a/templates/adminDashboardPage.html
+++ b/templates/adminDashboardPage.html
@@ -1,11 +1,16 @@
 <h1>Доска админа</h1>
 <div ng-controller="adminDashboardCtrl">
-    <table ng-repeat="staff in employedStaff">
-        <tr>
-            <td>{{staff.name}}</td>
-            <td><button ng-click="notArrange(staff.name)">Уволить</button></td>
-        </tr>
-    </table>
+    <md-card md-theme="default" md-theme-watch ng-repeat="staff in employedStaff">
+        <md-card-title>
+            <md-card-title-text>
+                <span class="md-headline">{{staff.name}}</span>
+                <span class="md-subhead">Устроен</span>
+            </md-card-title-text>
+        </md-card-title>
+        <md-card-actions layout="row" layout-align="end center">
+            <md-button class="md-raised md-warn" ng-click="notArrange(staff.name)">Уволить</md-button>
+        </md-card-actions>
+    </md-card>
 </div>
 
 
