--- a/templates/loginPage.html
+++ b/templates/loginPage.html
@@ -1,7 +1,13 @@
 <h1>Вход</h1>
-<div ng-controller="loginCtrl"ng-cloak>
+<div ng-controller="loginCtrl">
     <p>{{error}}</p>
-    Логин<input type="text" ng-model="login">
-    Пароль<input type="text" ng-model="password">
+    <md-input-container>
+        <label>Логин</label>
+        <input ng-model="login">
+    </md-input-container>
+    <md-input-container>
+        <label>Пароль</label>
+        <input ng-model="password">
+    </md-input-container>
     <md-button ng-click="loginFunc()" class="md-raised md-primary">Войти</md-button>
 </div>
