--- a/templates/registrationPage.html
+++ b/templates/registrationPage.html
@@ -1,7 +1,15 @@
-<h1>Регистрация сотрудников</h1>
 <div ng-controller="registrationCtrl">
-    Имя: <input type="text" ng-model="name">
-    Логин: <input type="text" ng-model="login">
-    Пароль: <input type="text" ng-model="password">
-    <button ng-click="registration()">Зарегестрировать</button>
+    <md-input-container>
+        <label>Имя</label>
+        <input ng-model="name">
+    </md-input-container>
+    <md-input-container>
+        <label>Логин</label>
+        <input ng-model="login">
+    </md-input-container>
+    <md-input-container>
+        <label>Пароль</label>
+        <input ng-model="password">
+    </md-input-container>
+    <md-button class="md-raised md-primary" ng-click="registration()">Зарегестрировать</md-button>
 </div>
