--- a/templates/dashboardPage.html
+++ b/templates/dashboardPage.html
@@ -1,5 +1,4 @@
-<h1>Доска</h1>
-<div ng-controller="dashboardCtrl">
+<div ng-controller="dashboardCtrl" layout="row" layout-align="center center">
     {{name}}
     {{arranged}}
 </div>
