--- a/templates/adminDashboardPage.html
+++ b/templates/adminDashboardPage.html
@@ -4,7 +4,8 @@
         <md-card-title>
             <md-card-title-text>
                 <span class="md-headline">{{staff.name}}</span>
-                <span class="md-subhead">Отдел: {{staff.department}}</span>
+                <span class="md-subhead">Отдел: {{staff.department.name}}</span>
+                <span class="md-subhead">Оклад: {{staff.department.salary}}</span>
             </md-card-title-text>
         </md-card-title>
         <md-card-actions layout="row" layout-align="end center">
