--- a/templates/dashboardPage.html
+++ b/templates/dashboardPage.html
@@ -1,4 +1,13 @@
-<div ng-controller="dashboardCtrl" layout="row" layout-align="center center">
-    {{name}}
-    {{arranged}}
+<div ng-controller="dashboardCtrl">
+    <md-card>
+        <md-card-title>
+            <md-card-title-text>
+                <span class="md-headline">Имя: {{user.name}}</span>
+                <span class="md-subhead" ng-hide="hide()">Не устроен</span>
+                <span class="md-subhead" ng-show="hide()">Отдел: {{user.department.name}}</span>
+                <span class="md-subhead" ng-show="hide()">Оклад: {{user.department.salary}} ₽</span>
+            </md-card-title-text>
+        </md-card-title>
+
+    </md-card>
 </div>
