--- a/templates/listEmployedPage.html
+++ b/templates/listEmployedPage.html
@@ -1,22 +1,2 @@
 <h2>Устроенные работники</h2>
-<div ng-controller="employedCtrl">
-    <md-card ng-repeat="staff in employedStaff">
-        <md-card-title>
-            <md-card-title-text>
-                <span class="md-headline">{{staff.name}}</span>
-                <span class="md-subhead">Отдел: {{staff.department.name}}</span>
-                <span class="md-subhead">Оклад: {{staff.department.salary}}</span>
-            </md-card-title-text>
-        </md-card-title>
-        <md-card-actions layout="row" layout-align="end center" ng-show="isAdmin()">
-            <md-input-container style="width: 200px">
-                <label>Отдел</label>
-                <md-select ng-model="department">
-                    <md-option ng-repeat="department in departments" ng-value="department">{{department}}</md-option>
-                </md-select>
-            </md-input-container>
-            <md-button class="md-raised md-primary" ng-click="changeDepartment(staff.name, department)">Сменить отдел</md-button>
-            <md-button class="md-raised md-warn" ng-click="notArrange(staff.name)">Уволить</md-button>
-        </md-card-actions>
-    </md-card>
-</div>
+<employed-staff></employed-staff>
